# opengl-3d-examples

./: .gitignore  CMakeLists.txt  LICENSE  README-ko.md  README.md
resources/: circle_mask.xcf  opengl.xcf  rgby.xcf  wood.xcf  wood2.xcf
resources/models/dice/: dice.blend  dice_dot.xcf
resources/models/policeman/: policeman.blend  policeman.mtl
resources/models/robot/: robot.blend  robot.blend1  robot2.blend  robot2.blend1  robot2.mtl  robot3.blend  robot3.blend1  robot3.mtl
resources/models/shape/: sphere.blend
resources/shaders/: Color.fs  Color.vs  ColorTexture.fs  ColorTexture.vs  HalfLambert.fs  HalfLambert.vs  HalfLambertTexture.fs  HalfLambertTexture.vs  Lambert.fs  Lambert.vs  LambertTexture.vs  MVP.vs  Outline.fs  Outline.vs  OutlineTexture.vs  Rim.fs  Rim.vs  RimTexture.fs  RimTexture.vs  Texture.fs  Thickness.fs  Thickness.vs  VertexColor.fs  VertexColor.vs
src/: Example00.cpp  Example00.h  Example01.cpp  Example01.h  Example02.cpp  Example02.h  Example03.cpp  Example03.h  Example04.cpp  Example04.h  Example05.cpp  Example05.h  Example06.cpp  Example06.h  Example07.cpp  Example07.h  Example08.cpp  Example08.h  Example09.cpp  Example09.h  Example10.cpp  Example10.h  Example11.cpp  Example11.h  Example12.cpp  Example12.h  Example13.cpp  Example13.h  Examples_Main.cpp
src/common/: Bezier.cpp  Bezier.h  BezierSpline.cpp  BezierSpline.h  BoxShape.h  Camera.cpp  Camera.h  CatmullRomSpline.cpp  CatmullRomSpline.h  DirectionalLight.cpp  DirectionalLight.h  GameObject.cpp  GameObject.h  Hermite.cpp  Hermite.h  HermiteSpline.cpp  HermiteSpline.h  Line.cpp  Line.h  LineShape.cpp  LineShape.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  RenderWindow.cpp  RenderWindow.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  SimpleMesh.cpp  SimpleMesh.h  SimpleTransform.cpp  SimpleTransform.h  Transform.cpp  (+3 more)
